[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks"
description = "Marco Notebooks"
authors = [{ name = "Marco Ramos", email = "majramos@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["notebooks"]
requires-python = ">=3.9"
dynamic = ["version", "readme"]
dependencies = [
    "bokeh==3.1.1",
    "boto3==1.28.20",
    "folium==0.16.0",
    "geopandas==0.14.3",
    "ipyturtle3==0.1.4",
    "matplotlib==3.8.4",
    "mkdocs-awesome-pages-plugin==2.9.1",
    "mkdocs-jupyter==0.24.2",
    "mkdocs-material==9.1.21",
    "mkdocs-minify-plugin==0.7.1",
    "numpy==1.24.3",
    "pandas==2.0.1",
    "pyarrow==12.0.1",
    "psutil==5.9.5",
    "requests==2.31.0",
    "shapely==2.0.4",
    "statsmodels==0.14.0",
    "scikit-learn==1.3.2",
    "yfinance==0.2.31",
    "scipy==1.11.1"
]

[project.urls]
homepage = "https://gitlab.com/majramos/notebook"
issues = "https://gitlab.com/majramos/notebook/-/issues"
changelog = "https://gitlab.com/majramos/notebook/-/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pip-tools", "python-dotenv"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "notebooks.__version__"}
readme = {file = ["README.md"]}