[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks"
description = "Marco Notebooks"
authors = [{ name = "Marco Ramos", email = "majramos@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["notebooks"]
requires-python = ">=3.9"
dynamic = ["version", "readme"]
dependencies = [
    "bokeh==3.4.1",
    "boto3==1.34.102",
    "folium==0.16.0",
    "geopandas==0.14.3",
    "matplotlib==3.8.4",
    "mkdocs-awesome-pages-plugin==2.9.2",
    "mkdocs-jupyter==0.24.7",
    "mkdocs-material==9.5.21",
    "mkdocs-minify-plugin==0.8.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow==16.0.0",
    "psutil==5.9.8",
    "requests==2.31.0",
    "shapely==2.0.4",
    "statsmodels==0.14.2",
    "scikit-learn==1.3.2",
    "yfinance==0.2.38",
    "scipy==1.13.0"
]

[project.urls]
homepage = "https://gitlab.com/majramos/notebook"
issues = "https://gitlab.com/majramos/notebook/-/issues"
changelog = "https://gitlab.com/majramos/notebook/-/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pip-tools", "python-dotenv"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "notebooks.__version__"}
readme = {file = ["README.md"]}